# Embedded-practical-Project

COM/src/: alarm.c  delete.c  modbus.c  usart.c
alarm_ubus/: CMakeLists.txt
alarm_ubus/cfg/: config.h
alarm_ubus/src/main/: main.c
alarm_ubus/src/modbus/: modbus.c  modbus.h
alarm_ubus/src/ubus/: ubus.c  ubus.h
cankao/: modbus.c  pub.c  read.c  sub.c  tcp.c  wrtite.c
cankao/modbus_rtu/: CMakeLists.txt
cankao/modbus_rtu/etc/config/: modbus_rtu  modbus_serial
cankao/modbus_rtu/src/: modbus_rtu.c  modbus_rtu.h  modbus_rtu_debug.h
cankao/modbus_rtu/src/tool/: data_deal.h
cankao/modbus_rtu/src/ubus/: ubus.c
cankao/modbus_rtu/usr/local/lib/lua/modbus_rtu/: modbus_data_deal
communication/: CMakeLists.txt
communication/src/read/: read.c
modbus_rtu/doc/: 实训室485传感器配置样例
modbus_rtu/etc/init.d/: modbus_rtu.service
modbus_rtu/src/: Makefile
modbus_rtu/src/cfg/: cfg.c
modbus_rtu/src/modbus_deal/: modbus_deal.c  modbus_deal.h
modbus_rtu/src/tool/: data_deal.c
modbus_rtu/src/ubus/: ubus.h
modbus_rtu_small/etc/config/: modbus_rtu  modbus_serial
modbus_rtu_small/src/: modbus_rtu.c  modbus_rtu.h
modbus_rtu_small/src/cfg/: cfg.c
modbus_rtu_small/src/ubus/: ubus.c
modbus_rtu_test/: CMakeLists.txt  README.md
modbus_rtu_test/doc/: sensor_cfg
modbus_rtu_test/etc/config/: modbus_rtu  modbus_serial
modbus_rtu_test/src/: modbus_rtu.c  modbus_rtu.h  sub.c
modbus_rtu_test/src/cfg/: cfg.c  cfg.h
modbus_rtu_test/src/ubus/: ubus.c
pub&&sub/: CMakeLists.txt  pub.c  sub.c
pub&&sub/src/free/: free.c
pub&&sub/src/modbus_init/: modbus_init.c  modbus_init.h
pub&&sub/src/read_sg/: read_sg.h
pub&&sub/src/read_uci/: read_uci.c  read_uci.h
pub&&sub/src/uci_tcp/: uci_tcp.c  uci_tcp.h
pub&&sub/src/write_register/: write_register.c  write_register.h
pub&&sub/uci_cfg/: client
pub_sub/: CMakeLists.txt  read  read.c  scan  scan.c  scan_addr  scan_addr.c
pub_sub/src/: pub.c  sub.c
pub_sub/src/free/: free.h
pub_sub/src/modbus_init/: modbus_init.c  modbus_init.h
pub_sub/src/read_co/: read_co.h
pub_sub/src/read_gg/: read_gg.c  read_gg.h
pub_sub/src/read_sg/: read_sg.c  read_sg.h
pub_sub/src/read_uci/: read_uci.c  read_uci.h
pub_sub/src/read_volume/: read_volume.h
pub_sub/src/write_register/: write_register.c  write_register.h
pub_sub/uci_cfg/: sensor
y_pub&&sub/: pub.c  sub.c
y_pub&&sub/src/free/: free.c
y_pub&&sub/src/modbus_init/: modbus_init.c  modbus_init.h
y_pub&&sub/src/read_gg/: read_gg.c  read_gg.h
y_pub&&sub/src/read_sg/: read_sg.c  read_sg.h
y_pub&&sub/src/read_uci/: read_uci.c  read_uci.h
y_pub&&sub/uci_cfg/: serial
zyh_pub_sub/: CMakeLists.txt  pub
zyh_pub_sub/src/: pub.c  sub  sub.c
zyh_pub_sub/src/modbus_init/: modbus_init.h
zyh_pub_sub/src/read_co/: read_co.c
zyh_pub_sub/src/read_uci/: read_uci.c  read_uci.h
zyh_pub_sub/src/read_volume/: read_volume.c
